<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_blue"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/my_title"
            android:textSize="@dimen/headingTextSize"
            android:textColor="@color/button_black"
            android:id="@+id/my_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/headingMargin"
            android:layout_marginBottom="@dimen/headingMargin" />

        <Button
            android:text="@string/popular_movies"
            android:textColor="@color/button_white"
            android:id="@+id/popular_movies"
            android:onClick="showToast"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/my_title"
            android:layout_marginTop="@dimen/buttonMargin"
            android:layout_marginBottom="@dimen/buttonMargin"
            android:background="@color/bluegray" />

        <Button
            android:text="@string/stock_hawk"
            android:textColor="@color/button_white"
            android:id="@+id/stock_hawk"
            android:onClick="showToast"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/popular_movies"
            android:layout_marginBottom="@dimen/buttonMargin"
            android:background="@color/bluegray" />

        <Button
            android:text="@string/build_it_bigger"
            android:textColor="@color/button_white"
            android:id="@+id/build_it_bigger"
            android:onClick="showToast"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/stock_hawk"
            android:layout_marginBottom="@dimen/buttonMargin"
            android:background="@color/bluegray" />

        <Button
            android:text="@string/make_your_app_material"
            android:textColor="@color/button_white"
            android:id="@+id/make_your_app_material"
            android:onClick="showToast"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/build_it_bigger"
            android:layout_marginBottom="@dimen/buttonMargin"
            android:background="@color/bluegray" />

        <Button
            android:text="@string/go_ubiquitous"
            android:textColor="@color/button_white"
            android:id="@+id/go_ubiquitous"
            android:onClick="showToast"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/make_your_app_material"
            android:layout_marginBottom="@dimen/buttonMargin"
            android:background="@color/bluegray" />

        <Button
            android:text="@string/capstone"
            android:textColor="@color/button_white"
            android:id="@+id/capstone"
            android:onClick="showToast"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/buttonHeight"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/go_ubiquitous"
            android:layout_marginBottom="@dimen/buttonMargin"
            android:background="@color/bluegray" />

    </RelativeLayout>
</ScrollView>
